[package]
name = "moya-rust"
version = "0.1.0"
authors = ["hxq"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
erased-serde = "0.3.18"
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
http = "0.2.4"
futures = "0.3"
anyhow = "1.0"